Avoid excessive repo title wrap by deprioritizing the repo header actions

--- a/source/features/github-bugs.css
+++ b/source/features/github-bugs.css
@@ -77,3 +77,16 @@
 .pagehead-actions :is(.btn, summary) .octicon {
 	margin-right: 4px !important;
 }
+
+/* Avoid excessive repo title wrap by deprioritizing the repo header actions #5398 */
+:root .pagehead-actions {
+	flex-shrink: 3 !important;
+}
+
+:root .pagehead-actions > li {
+	margin: 0;
+}
+
+.pagehead-actions > li > * {
+	margin: 0 8px 8px 0;
+}
